# Community-Detection

./: .gitignore  CMakeLists.txt  README.md  Random_Graph_generator.py  main.cpp
.github/workflows/: build.yaml
football/: dotTopng.py  football_starting_example.dot  football_starting_example4.dot
helpful-scripts/: dotTopng.py
src/: main.cpp
